# dbgpts

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
agents/: pyproject.toml
agents/summarizer-agent-example/: MANIFEST.in  dbgpts.toml  pyproject.toml
agents/summarizer-agent-example/summarizer_agent_example/: __init__.py  action.py
apps/: pyproject.toml
operators/: pyproject.toml
operators/awel-simple-operator/: MANIFEST.in  dbgpts.toml  pyproject.toml
operators/awel-simple-operator/awel_simple_operator/: __init__.py
resources/: README.md  pyproject.toml
resources/jina-web-reader/: MANIFEST.in  README.md  dbgpts.toml  pyproject.toml
resources/jina-web-reader/jina_web_reader/: __init__.py
resources/simple-calculator-example/: MANIFEST.in  dbgpts.toml  pyproject.toml
resources/simple-calculator-example/simple_calculator_example/: __init__.py
workflow/: README.md  pyproject.toml
workflow/all-in-one-entrance/: MANIFEST.in  README.md  dbgpts.toml  pyproject.toml
workflow/all-in-one-entrance/all_in_one_entrance/: __init__.py  chat_database.py  chat_knowledge.py
workflow/andrewyng-translation-agent/: MANIFEST.in  README.md  dbgpts.toml  pyproject.toml
workflow/andrewyng-translation-agent/andrewyng_translation_agent/: __init__.py
workflow/awel-flow-ai-info-search/: MANIFEST.in  README.md  pyproject.toml
workflow/awel-flow-ai-info-search/awel_flow_example_chat/definition/: flow_definition.json
workflow/awel-flow-example-chat/: dbgpts.toml  pyproject.toml
workflow/awel-flow-example-chat/awel_flow_example_chat/definition/: flow_definition.json
workflow/awel-flow-rag-chat-example/: MANIFEST.in  README.md  dbgpts.toml  pyproject.toml
workflow/awel-flow-rag-chat-example/awel_flow_rag_chat_example/definition/: flow_definition.json
workflow/awel-flow-rag-summary-example/: MANIFEST.in  README.md  dbgpts.toml  pyproject.toml
workflow/awel-flow-rag-summary-example/awel_flow_rag_summary_example/definition/: flow_definition.json
workflow/awel-flow-simple-streaming-chat/: MANIFEST.in  README.md  dbgpts.toml  pyproject.toml
workflow/awel-flow-simple-streaming-chat/awel_flow_simple_streaming_chat/definition/: flow_definition.json
workflow/awel-flow-web-info-search/: MANIFEST.in  dbgpts.toml  pyproject.toml
workflow/awel-flow-web-info-search/awel_flow_web_info_search/definition/: flow_definition.json
workflow/db-expert-assisant/: MANIFEST.in  README.md  dbgpts.toml  pyproject.toml
workflow/db-expert-assisant/db_expert_assisant/definition/: flow_definition.json
workflow/financial-report-knowledge-factory/: README.md  dbgpts.toml  pyproject.toml
workflow/financial-report-knowledge-factory/financial_report_knowledge_factory/: __init__.py  extract.py  fin_knowledge.py
workflow/financial-robot-app/: MANIFEST.in  README.md  dbgpts.toml  main.py  pyproject.toml
workflow/financial-robot-app/financial_robot_app/: __init__.py  chat_database.py  chat_indicator.py  chat_knowledge.py  chat_normal.py  classifier.py  common.py  intent.py  model.py
workflow/financial-robot-app/financial_robot_app/models/dbgpt-hub-nlu-v0.1/: config.json  tokenizer_config.json
workflow/rag-save-url-to-vstore/: MANIFEST.in  README.md  dbgpts.toml  pyproject.toml
workflow/rag-save-url-to-vstore/rag_save_url_to_vstore/definition/: flow_definition.json
workflow/rag-url-knowledge-example/: MANIFEST.in  README.md  dbgpts.toml  pyproject.toml
workflow/rag-url-knowledge-example/rag_url_knowledge_example/definition/: flow_definition.json
