[tool.poetry]
name = "dbgpts"
version = "0.1.0"
description = "Intelligent data apps and assets with LLMs"
authors = []
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
tomlkit = "^0.12.4"
dbgpt = {extras = ["cli"], version = "^0.5.2"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
pytest-asyncio = "^0.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"