[tool.poetry]
name = "summarizer-agent-example"
version = "0.1.2"
description = ""
authors = ["Fangyin Cheng <staneyffer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dbgpt = {extras = ["agent"], version = "^0.5.6rc1"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
