[tool.poetry]
name = "jina-web-reader"
version = "0.1.0"
description = "Convert any URL to an LLM-friendly input with a simple prefix https://r.jina.ai/"
authors = ["Fangyin Cheng <staneyffer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
