[tool.poetry]
name = "andrewyng-translation-agent"
version = "0.1.0"
description = "Implementation of Andrewyng Translation Agent: https://github.com/andrewyng/translation-agent"
authors = ["Fangyin Cheng <staneyffer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
