[tool.poetry]
name = "db-expert-assisant"
version = "0.1.0"
description = "A db expert assisant flow."
authors = ["Henry Yang <yhjun1026@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"



