[tool.poetry]
name = "financial-report-knowledge-factory"
version = "0.1.0"
description = "A pipline to process financial report knowledge"
authors = ["Aries <916701291@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
