[tool.poetry]
name = "financial-robot-app"
version = "0.1.0"
description = "Financial Report chat robot"
authors = ["Aries <916701291@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]

financial-report-knowledge-factory = {path = "../financial-report-knowledge-factory", develop = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
