[tool.poetry]
name = "rag-url-knowledge-example"
version = "0.1.0"
description = "A complete example of RAG based on URL knowledge. Please install the workflow to import knowledge before using it: `dbgpt app install rag-save-url-to-vstore`"
authors = ["Fangyin Cheng <staneyffer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
